6898857: [Regression] -XX:NewRatio with -XX:+UseConcMarkSweepGC causes fatal error

Use CollectorPolicy information instead of MaxNewSize

Reviewed-by: ysr, jcoomes